app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@keyframes appear {
  from {
    opacity: 0;
    transform: translateY(0.625rem);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}
:root {
  --colors-white: hsl(0, 0%, 100%);
  --colors-black: hsl(0, 0%, 0%);
  --colors-black-alpha7: hsla(0, 0%, 0%, 0.7);
  --colors-black-alpha26: hsla(0, 0%, 0%, 0.26);
  --colors-background: hsl(225, 100%, 99%);
  --colors-navbar: hsla(158, 20%, 81%, 0.2);
  --colors-primary: hsl(183, 87%, 24%);
  --colors-outline-primary: hsla(183, 87%, 24%, 0.3);
  --colors-secondary-background: hsl(22, 89%, 40%);
  --colors-secondary-navbar: hsl(17, 76%, 42%);
  --colors-outline-secondary: hsla(22, 89%, 40%, 0.3);
  --colors-tertiary: hsl(158, 20%, 81%);
  --colors-tertiary-hovered-field: hsla(158, 20%, 81%, 0.6);
  --colors-fern-green: hsl(103, 36%, 37%);
  --colors-fern-green-underline: hsla(103, 36%, 37%, 0.3);
  --colors-text: hsl(0, 0%, 21%);
  --colors-text-hint: hsla(0, 0%, 21%, 0.8);
  --colors-error: hsl(0, 65%, 51%);
  --colors-skeleton-start: hsl(210, 38%, 95%);
  --colors-skeleton-end: hsl(214, 20%, 69%);

  --fontsizes-label: clamp(0.75rem, 1.3vw, 0.875rem);
  --fontsizes-body: clamp(1.125rem, 1.5vw, 1.25rem);
  --fontsizes-button: clamp(1rem, 1.5vw, 1.125rem);
  --fontsizes-handwritten: clamp(2rem, 4vw, 2.5rem);
  --fontsizes-1: clamp(1.75rem, 3vw, 2rem);
  --fontsizes-2: clamp(1.25rem, 2vw, 1.5rem);
  --fontsizes-3: clamp(1.25rem, 2vw, 1.5rem);
  --fontsizes-subtitle: clamp(1rem, 1.5vw, 1.125rem);

  --fontweights-light: 300;
  --fontweights-regular: 400;
  --fontweights-medium: 500;
  --fontweights-semiBold: 600;
  --fontweights-bold: 700;

  --radii-input: 0.375rem 0.375rem 0 0;
  --radii-avatar: 3.125rem;
  --radii-rounded: 0.375rem;
  --radii-round: 50%;
  --radii-pill: 999rem;

  --shadows-input: 0 0.125rem 0 0 var(--colors-black-alpha7);
  --shadows-input-focus: 0 0.125rem 0 0 var(--colors-secondary-background);
  --shadows-focus: 0 0 0.375rem 0.125rem var(--colors-black-alpha26);
  --shadows-focus-large: 0 0 0.75rem 0.25rem var(--colors-black-alpha26);
  --shadows-selected: 0 0 0.5rem 0.25rem var(--colors-black-alpha26);
  --shadows-selected-large: 0 0 1rem 0.5rem var(--colors-black-alpha26);
  --shadows-active: 0 0 0.375rem 0.25rem var(--colors-black-alpha26) inset;
  --shadows-active-large: 0 0 0.75rem 0.5rem var(--colors-black-alpha26) inset;

  --animation-appear: 400ms ease-in appear forwards;
}

html,
body {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: inherit;
  overflow-x: hidden;
}

